# test_parquet_file_read_polars_pandas

./: .gitignore  Dockerfile  README.md  analysis_script.py  create_parquet_files.py  pyproject.toml  remove_files_belonging_to_root_in_project.sh  test_for_pytest.py  test_minimal_custom_check_fun.py  test_minimal_custom_check_fun_pandas.py  test_minimal_custom_check_fun_polars.py  test_read_parquet_file.py
